remove 'passed' column, fiddle with css

--- a/static/index.html
+++ b/static/index.html
@@ -27,30 +27,34 @@
                 </p>
                 <p class="total_stats">
                 (<span id="executed"></span> de <span id="total"></span>
-                éxécutés)
+                exécutés)
                 </p>
             </div>
         </div>
         <div class="row-fluid">
-            <div class="span4">
-                <h1>Fonctionnels</h1>
-                <span class="passed"></span>
-            </div>
-            <div class="span4">
-                <h1>Régressions</h1>
-                <span class="failed"></span>
+            <div class="span6">
+
+                <span class="heading">
+                    Régressions <span class="failed"></span>
+                </span>
+
                 <div class="well redwell">
                     <ul class="failed_list">
                     </ul>
                 </div>
+
             </div>
-            <div class="span4">
-                <h1>Bloqués</h1>
-                <span class="blocked"></span>
+            <div class="span6">
+
+                <span class="heading">
+                    Bloqués <span class="blocked"></span>
+                </span>
+
                 <div class="well bluewell">
                     <ul class="blocked_list">
                     </ul>
                 </div>
+
             </div>
         </div>
     </div>
