--- a/static/index.html
+++ b/static/index.html
@@ -12,6 +12,15 @@
 </head>
 
 <body>
+    <div class="navbar navbar-inverse navbar-fixed top">
+        <div class="navbar-inner">
+            <a class="brand" href="/">XiVO board</a>
+            <ul class="nav">
+                <li class="active"><a href="#">Tests</a></li>
+                <li><a href="/score">Pointage</a></li>
+            </ul>
+        </div>
+    </div>
     <div class="container-fluid">
         <div class="row-fluid">
             <div class="span12">
