--- a/static/index.html
+++ b/static/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <!-- Bootstrap -->
-    <link href="/static/css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link href="/static/css/bootstrap-responsive.min.css" rel="stylesheet" media="screen">
-    <link href="/static/css/custom.css" rel="stylesheet">
+    <link href="static/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="static/css/bootstrap-responsive.min.css" rel="stylesheet" media="screen">
+    <link href="static/css/custom.css" rel="stylesheet">
 </head>
 
 <body>
@@ -25,7 +25,7 @@
         <div class="row-fluid">
             <div class="span12">
                 <div class="jumbotron">
-                    <h1 class="title">Tests <img src="/static/logoxivo.png"></h1>
+                    <h1 class="title">Tests <img src="static/img/logoxivo.png"></h1>
                 </div>
             </div>
         </div>
@@ -68,8 +68,8 @@
         </div>
     </div>
     <script src="http://code.jquery.com/jquery.js"></script>
-    <script src="/static/js/bootstrap.min.js"></script>
-    <script src="/static/main.js"></script>
+    <script src="static/js/bootstrap.min.js"></script>
+    <script src="static/js/main.js"></script>
 </body>
 
 </html>
