--- a/static/leaderboard.html
+++ b/static/leaderboard.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <!-- Bootstrap -->
-    <link href="/static/css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link href="/static/css/bootstrap-responsive.min.css" rel="stylesheet" media="screen">
-    <link href="/static/css/custom.css" rel="stylesheet">
+    <link href="static/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="static/css/bootstrap-responsive.min.css" rel="stylesheet" media="screen">
+    <link href="static/css/custom.css" rel="stylesheet">
 </head>
 
 <body>
@@ -44,8 +44,8 @@
         </div>
     </div>
     <script src="http://code.jquery.com/jquery.js"></script>
-    <script src="/static/js/bootstrap.min.js"></script>
-    <script src="/static/leaderboard.js"></script>
+    <script src="static/js/bootstrap.min.js"></script>
+    <script src="static/js/leaderboard.js"></script>
 </body>
 
 </html>
