typo in sentence

--- a/static/index.html
+++ b/static/index.html
@@ -35,7 +35,7 @@
                     Il en reste <span id="waiting"></span>
                 </p>
                 <p class="total_stats">
-                (<span id="executed"></span> de <span id="total"></span>
+                (<span id="executed"></span> / <span id="total"></span>
                 exécutés)
                 </p>
             </div>
