rename variables and elements to make their meaning more clear

--- a/static/index.html
+++ b/static/index.html
@@ -16,12 +16,12 @@
         <div class="navbar-inner">
             <a class="brand" href="/">Tests <img src="static/img/logoxivo.png" width="50" height="70"></a>
             <ul class="nav">
-                <li class="active"><a id="link-remaining" href="#">Tests</a></li>
+                <li class="active"><a id="link-stats" href="#">Tests</a></li>
                 <li><a id="link-scoreboard" href="#">Pointage</a></li>
             </ul>
         </div>
     </div>
-    <div id="remaining">
+    <div id="stats">
         <div class="container-fluid">
             <div class="row-fluid">
                 <div class="well counter">
@@ -88,7 +88,7 @@
     </div>
     <script src="http://code.jquery.com/jquery.js"></script>
     <script src="static/js/bootstrap.min.js"></script>
-    <script src="static/js/leaderboard.js"></script>
+    <script src="static/js/scoreboard.js"></script>
     <script src="static/js/main.js"></script>
 </body>
 
