show path of last test executed for each person in scoreboard

--- a/static/index.html
+++ b/static/index.html
@@ -75,6 +75,7 @@
                         <tr>
                             <th class="span3">Nom</th>
                             <th class="span2">Tests exécutés</th>
+                            <th class="span4">Dossier</th>
                             <th></th>
                         </tr>
                     </thead>
