--- a/static/index.html
+++ b/static/index.html
@@ -30,7 +30,7 @@
                     </p>
                     <p class="total_stats">
                     (<span id="executed"></span> / <span id="total"></span>
-                    exécutés)
+                    exécutés pour la <span class="version"></span>)
                     </p>
                 </div>
             </div>
@@ -66,7 +66,7 @@
         <div class="container-fluid">
             <div class="row-fluid">
                 <div class="span12">
-                    <h1 class="title">Pointage</h1>
+                    <h1 class="title">Pointage (<span class="version"></span>)</h1>
                 </div>
             </div>
             <div class="row-fluid">
