add link to generate test report

--- a/static/index.html
+++ b/static/index.html
@@ -16,6 +16,7 @@
         <div class="navbar-inner">
             <a class="brand" href="/">Tests <img src="static/img/logoxivo.png" width="50" height="70"></a>
             <ul class="nav">
+                <li><a href="report.html">Générer rapport</a></li>
             </ul>
         </div>
     </div>
