add matrix effect

--- a/static/index.html
+++ b/static/index.html
@@ -22,7 +22,7 @@
     </div>
     <div id="stats">
         <div class="container-fluid">
-            <div class="row-fluid">
+            <div id="remaining" class="row-fluid">
                 <div class="well counter">
                     <p class="ticker">
                         Il en reste <span id="waiting"></span>
