add percentage for francois

--- a/static/index.html
+++ b/static/index.html
@@ -28,7 +28,8 @@
                         Il en reste <span id="waiting"></span>
                     </p>
                     <p class="total_stats">
-                    (<span id="executed"></span> / <span id="total"></span>
+                    (<span id="executed"></span> / <span id="total"></span> -
+                     <span id="percent"></span> % -
                     exécutés pour la <span class="version"></span>)
                     </p>
                 </div>
