--- a/static/index.html
+++ b/static/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Tests XiVO</title>
+    <title>Tests Wazo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <!-- Bootstrap -->
@@ -14,7 +14,7 @@
 <body>
     <div class="navbar navbar-inverse navbar-fixed top">
         <div class="navbar-inner">
-            <a class="brand" href="/">Tests <img src="static/img/logoxivo.png" width="50" height="70"></a>
+            <a class="brand" href="/">Tests <img src="static/img/logo.png" width="50" height="70"></a>
             <ul class="nav">
                 <li><a href="report.html">Générer rapport</a></li>
             </ul>
